# tast_txt

./: CMakeLists.txt  README.md
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: app.h  main.h
resources/: task_queue.manifest  task_queue.rc
src/: app.cpp  main.cpp
